Tue Feb  2 22:24:56 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Added an #include that was necessary for inline=0 builds.

Tue Feb  2 21:59:28 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          In remove_sample(), TransportReatinedElement can't be used when there
          is no send_buffer_ because it creates a new ACE_Message_Block which
          is never cleaned up.  Replaced it with the TransportSendElement.

        * dds/DCPS/transport/framework/TransportSendElement.h:
        * dds/DCPS/transport/framework/TransportSendElement.inl:

          Construct a TransportSendElement from a pointer to a const
          DataSampleListElement.

        * dds/DCPS/DataSampleList.h:
        * dds/DCPS/DataSampleList.inl:
        * dds/DCPS/DataSampleList.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/transport/framework/SendResponseListener.h:
        * dds/DCPS/transport/framework/SendResponseListener.cpp:
        * dds/DCPS/transport/framework/TransportSendListener.h:
        * dds/DCPS/transport/framework/TransportSendListener.cpp:

          data_dropped() and data_delivered() callbacks now take a pointer to
          a const DataSampleListElement, which required other const-ness
          changes.  Unfortunately this is incomplete, but it's a start.

Tue Feb  2 18:41:21 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/diagrams/class.dia:
        * docs/html/multicast/images/class.png:
        * docs/html/multicast/multicast.html:

          Updated documentation.

Tue Feb  2 16:17:04 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/idl2jni_visitor.cpp:
